WIP mostly working. have it saving email preferences and retrieving email preferences. related to #360

--- a/views/partials/profile/profile-card-manage-emails.hbs
+++ b/views/partials/profile/profile-card-manage-emails.hbs
@@ -8,8 +8,8 @@
         </div>
 
         <form action="/profile/manage-emails" method="post">
-            <!--ceuDoc-->
             <div class="row">
+            <!--ceuDoc-->
                 <div class="input-field col s12 m10 offset-m1">
                     <label>
                         <input type="checkbox" name="ceuDoc" id="ceuDoc"
@@ -20,11 +20,9 @@
                         <span>{{{__ "New CEUs Awarded"}}}</span>
                     </label>
                 </div>
-            </div>
             <!--/ceuDoc-->
 
             <!--questionTips-->
-            <div class="row">
                 <div class="input-field col s12 m10 offset-m1">
                     <label>
                         <input type="checkbox" name="questionTips" id="questionTips"
@@ -35,11 +33,9 @@
                         <span>{{{__ "Question Tips"}}}</span>
                     </label>
                 </div>
-            </div>
             <!--/questionTips-->
 
             <!--planningDoc-->
-            <div class="row">
                 <div class="input-field col s12 m10 offset-m1">
                     <label>
                         <input type="checkbox" name="planningDoc" id="planningDoc"
@@ -50,11 +46,9 @@
                         <span>{{{__ "Lesson Plan Documents"}}}</span>
                     </label>
                 </div>
-            </div>
             <!--/planningDoc-->
 
             <!--summaryDoc-->
-                <div class="row">
                     <div class="input-field col s12 m10 offset-m1">
                         <label>
                             <input type="checkbox" name="summaryDoc" id="summaryDoc"
@@ -65,11 +59,9 @@
                             <span>{{{__ "Lesson Summary Documents"}}}</span>
                         </label>
                     </div>
-                </div>
             <!--/summaryDoc-->
 
             <!--reflectionReminders-->
-            <div class="row">
                 <div class="input-field col s12 m10 offset-m1">
                     <label>
                         <input type="checkbox" name="reflectionReminders" id="reflectionReminders"
@@ -80,13 +72,15 @@
                         <span>{{{__ "Reflection Reminders"}}}</span>
                     </label>
                 </div>
-            </div>
             <!--/reflectionDoc-->
+            </div>
             <div class="row center-align">
+                <div class="input-field col s12 m10 offset-m1">
                 <button class="btn waves-effect waves-light"
                         type="submit">
                     {{{__ "Save"}}}
                 </button>
+                </div>
             </div>
         </form>
     </div>
