--- a/views/register.hbs
+++ b/views/register.hbs
@@ -96,7 +96,7 @@
     </div>
 </div>
 
-<form id="final-registration-form" class="" action="/complete-profile" method="get">
+<form id="final-registration-form" class="" action="/profile/complete" method="get">
 
     <input type="hidden" name="firstname" id="firstname" value="">
     <input type="hidden" name="lastname" id="lastname" value="">
