--- a/views/partials/profile/profile-card-manage-emails.hbs
+++ b/views/partials/profile/profile-card-manage-emails.hbs
@@ -7,7 +7,7 @@
             </div>
         </div>
 
-        <form action="/profile/manage-emails" method="post">
+        <form action="/profile" method="post">
             <div class="row">
 
                 <!--questionTips-->
