WIP: Starting to remove facebook and streamline the login process. Related to #395

--- a/views/partials/sole-config-frontend-js.hbs
+++ b/views/partials/sole-config-frontend-js.hbs
@@ -1,7 +1,6 @@
 <script type="text/javascript">
 var soleConfig = {
   "serverUrl":"{{config.serverUrl}}",
-  "appId":"{{config.appId}}",
-  "facebookAppID": "{{config.facebookAppID}}"
+  "appId":"{{config.appId}}"
 }
 </script>
