--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,78 +1,77 @@
-<div class="row" style="padding-top:50px;">
-    <div class="col s12 offset-m2 m8 offset-l3 l6">
-        <div class="card-panel">
-            <div class="row center-align">
-                {{#if ring.logo}}
-                    <div class="col s8 offset-s2">
-                        <img class="responsive-img" src="/images/logos/{{ring.logo}}" height="165" alt="{{ring.fullName}}">
-                    </div>
-                {{else}}
-                    <video width="165" height="165" autoplay muted>
-                        <source src="/images/logos/animated-logo-small.webm" type="video/webm">
-                        <source src="/images/logos/animated-logo-small.mp4" type="video/mp4">
-                    </video>
-                {{/if}}
-            </div>
-            <div class="row">
-              <div class="col s12 l6 center">
-                  <img src="/images/facebook-login-button.png" id="fb-login" onmouseover="this.src='/images/facebook-login-button-hover.png'" onmouseout="this.src='/images/facebook-login-button.png'"  />
-              </div>
-              <div class="col s12 l6 center">
-                  <div class="g-signin2"
-                       data-onsuccess="onGoogleSignIn"
-                       data-theme="dark"
-                       data-width="200"
-                       data-height="50"
-                       data-longtitle="true"></div>
-              </div>
-            </div>
-            <form id="login-form" action="/login" method="post">
-                <div class="row">
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">email</i>
-                        <input id="email" type="email" name="email" class="validate" value="{{email}}">
-                        <label for="email">{{{__ "Email"}}}</label>
-                        <span class="helper-text" data-error="{{{__ "invalid email"}}}"></span>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12">
-                        <i class="material-icons prefix">security</i>
-                        <input id="password" name="password" type="password" class="validate">
-                        <label for="password">{{{__ "Password"}}}</label>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col s12">
-                        <div class="red-text" id="error"></div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="input-field col s12 center">
-                        <button type="submit" class="signin-db btn red waves-effect waves-light" id="login" onclick="function (e){e.preventDefault()}">Log In</button>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="center col s12">
+<link href="/css/admin-materialize.min.css" rel="stylesheet">
 
-                        {{#if ring.slug}}
-                            {{{__ "Need an account?"}}} <a href="/{{ring.slug}}/register">{{{__ "Sign up here."}}}</a>
-                        {{else}}
-                            {{{__ "Need an account?"}}} <a href="/register">{{{__ "Sign up here."}}}</a>
-                        {{/if}}
+<div class="container">
+    <div class="row">
+        <div class="col s12 m8 offset-m2">
 
-                    </div>
-                    <div class="center col s12">
-                        <br>
+            <div class="card card-login">
+                <div class="card-login-splash hide-on-med-and-down">
+                    {{#if ring.logo}}
+                        <img class="responsive-img" src="/images/logos/{{ring.logo}}" height="165" alt="{{ring.fullName}}" style="padding: 10%">
+                    {{else}}
+                        <video width="80%" autoplay muted>
+                            <source src="/images/logos/animated-logo-small.webm" type="video/webm">
+                            <source src="/images/logos/animated-logo-small.mp4" type="video/mp4">
+                        </video>
+                    {{/if}}
+                </div>
+                <div class="card-content">
+                    <span class="card-title">{{{__ "Log In"}}}</span>
+                    <form id="login-form" action="/login" method="post">
+                        <div class="input-field">
+                            <input id="email" type="email" name="email" class="validate" value="{{email}}">
+                            <label for="email">{{{__ "Email"}}}</label>
+                            <span class="helper-text" data-error="{{{__ "invalid email"}}}"></span>
+                        </div>
+                        <div class="input-field">
+                            <input id="password" name="password" type="password" class="validate">
+                            <label for="password">{{{__ "Password"}}}</label>
+                        </div>
+
+                        <div class="row center">
+                            <div class="col s12">
                         <a href="#password-reset-modal" class="modal-trigger">
                             {{{__ "Help! I forgot my password."}}}
                         </a>
-                    </div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col s12">
+                                <div class="red-text" id="error"></div>
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col s12">
+                                <input class="btn" type="submit" value="{{{__ "Log In"}}} ⇨" style="width: 100%;">
+                            </div>
+                            <div class="col s12 center">
+                                <a class="waves-effect waves-teal" href="{{#if ring.slug}}/{{ring.slug}}{{/if}}/register">{{{__ "Need an account?"}}}</a>
+                            </div>
+                        </div>
+
+                        <hr>
+
+                        <div class="center">
+                            <div class="g-signin2"
+                                 data-onsuccess="onGoogleSignIn"
+                                 data-theme="dark"
+                                 data-width="175"
+                                 data-height="40"
+                                 data-longtitle="true"></div>
+                            <div style="color: #9e9e9e; margin: 10px; font-size:.75em;">Looking for <a href="/facebook-login">the facebook login</a>?</div>
+                        </div>
+
+                    </form>
                 </div>
-            </form>
+            </div>
+
         </div>
     </div>
+
 </div>
+
 
 <div class="modal" id="password-reset-modal">
     <div class="modal-content">
@@ -98,9 +97,8 @@
 </div>
 
 <form id="login-with-session" action="/login" method="get">
-  <input type="hidden" name="originalUrl" id="originalUrl" value="{{originalUrl}}">
+    <input type="hidden" name="originalUrl" id="originalUrl" value="{{originalUrl}}">
 </form>
-
 
 <!-- Modal for iOS download -->
 <div id="app-download-modal" class="modal bottom-sheet">
