Finishes up removing facebook from web app. Related to #395

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -60,7 +60,7 @@
                                  data-width="175"
                                  data-height="40"
                                  data-longtitle="true"></div>
-                            <div style="color: #9e9e9e; margin: 10px; font-size:.75em;">Looking for <a href="/facebook-login">the facebook login</a>?</div>
+                            <!--<div style="color: #9e9e9e; margin: 10px; font-size:.75em;">Looking for <a href="/facebook-login">the facebook login</a>?</div>-->
                         </div>
 
                     </form>
