--- a/views/home.hbs
+++ b/views/home.hbs
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                     <div class="card-action center-align">
-                        <a href="/dashboard?ring={{id}}">{{{__ "Dashboard"}}}</a>
+                        <a href="/rings/{{id}}">{{{__ "Dashboard"}}}</a>
                     </div>
                 </div>
             </div>
