--- a/views/admin/map-pa.hbs
+++ b/views/admin/map-pa.hbs
@@ -87,7 +87,7 @@
         // Data and color scale
         var data = d3.map();
         var colorScale = d3.scaleThreshold()
-                .domain([1, 10, 50, 100, 1000, 20000])
+                .domain([0.1, 0.5, 1, 5, 10, 25])
                 .range(d3.schemeBlues[7]);
 
         // Load external data and boot
@@ -114,8 +114,8 @@
                     )
                     // set the color of each country
                     .attr("fill", function (d) {
-                        d.total = data.get(d.id) || 0;
-                        return colorScale(d.total);
+                        d.percentage = Math.round(10000*(data.get(d.id)/d.properties.teachers))/100 || 0;
+                        return colorScale(d.percentage);
                     })
                     .attr("stroke", "black")
                     // Modification of custom tooltip code provided by Malcolm Maclean, "D3 Tips and Tricks"
@@ -124,7 +124,7 @@
                         div.transition()
                                 .duration(200)
                                 .style("opacity", .9);
-                        div.text(d.properties.name + "(" + data.get(d.id) +" users)")
+                        div.text(d.properties.name + " (" + d.percentage +"%)")
                                 .style("left", (d3.event.pageX) + "px")
                                 .style("top", (d3.event.pageY - 28) + "px");
                     })
