--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -18,426 +18,37 @@
                 <!--</li>-->
             </ul>
             <div id="educators">
-                <canvas id="educator-growth-chart"></canvas>
+                <div class="row">
+                    <div class="col s12">
+                    {{>rings/dashboard-card-educators-growth}}
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col s12 m6">
-                        <div class="card">
-                            <div class="card-content">
-                                <span class="card-title">
-                                    {{{__ "Educators By Grade"}}}
-                                    <a id="resetEducatorByGrade" class="right waves-effect waves-light btn-small">reset</a>
-                                </span>
-                                <canvas id="educator-by-grade-chart"></canvas>
-                            </div>
-                        </div>
+                    {{>rings/dashboard-card-educators-by-grade}}
                     </div>
                     <div class="col s12 m6">
-                        <div class="card">
-                            <div class="card-content">
-                                <span class="card-title">
-                                    {{{__ "Educators By Subject"}}}
-                                    <a id="resetEducatorBySubject" class="right waves-effect waves-light btn-small">reset</a>
-                                </span>
-                                <canvas id="educator-by-subject-chart"></canvas>
-                            </div>
-                        </div>
+                        {{>rings/dashboard-card-educators-by-subject}}
                     </div>
                 </div>
             </div>
             <div id="soles">
-                <canvas id="soles-growth-chart"></canvas>
+                <div class="row">
+                    <div class="col s12">
+                        {{>rings/dashboard-card-soles-growth}}
+                    </div>
+                </div>
+
                 <div class="row">
                     <div class="col s12 m6">
-                        <div class="card">
-                            <div class="card-content">
-                                <span class="card-title">{{{__ "SOLEs By Grade"}}}</span>
-                                <canvas id="soles-by-grade-chart"></canvas>
-                            </div>
-                        </div>
+                        {{>rings/dashboard-card-soles-by-grade}}
+
                     </div>
                     <div class="col s12 m6">
-                        <div class="card">
-                            <div class="card-content">
-                                <span class="card-title">{{{__ "SOLEs By Subject"}}}</span>
-                                <canvas id="soles-by-subject-chart"></canvas>
-                            </div>
-                        </div>
+                        {{>rings/dashboard-card-soles-by-subject}}
                     </div>
                 </div>
              </div>
         </div>
     </div>
 </div>
-
-
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
-
-<script>
-$(document).ready(function() {
-    var educatorGrowthChartCanvas = document.getElementById('educator-growth-chart').getContext('2d');
-    var educatorGrowthChart = new Chart(educatorGrowthChartCanvas, {
-        // The type of chart we want to create
-        type: 'line',
-
-        // The data for our dataset
-        data: {
-            labels: ["{{{__ "January"}}}", "{{{__ "February"}}}", "{{{__ "March"}}}", "{{{__ "April"}}}", "{{{__ "May"}}}", "{{{__ "June"}}}", "{{{__ "July"}}}", "{{{__ "August"}}}", "{{{__ "September"}}}", "{{{__ "October"}}}", "{{{__ "November"}}}", "{{{__ "December"}}}"],
-            datasets: [
-                {
-                    label: "{{{__ "New Users 2017"}}}",
-                    backgroundColor: 'rgb(255, 99, 132)',
-                    borderColor: 'rgb(255, 99, 132)',
-                    data: [{{dashboard.userCountByMonth.[2017]}}],
-                    fill: false,
-                },
-                {
-                    label: "{{{__ "New Users 2018"}}}",
-                    backgroundColor: 'rgb(47,166,154)',
-                    borderColor: 'rgb(47,166,154)',
-                    data: [{{dashboard.userCountByMonth.[2018]}}],
-                    fill: false,
-                },
-                {
-                    label: "{{{__ "New Users 2019"}}}",
-                    backgroundColor: 'rgb(3,169,244)',
-                    borderColor: 'rgb(3,169,244)',
-                    data: [{{dashboard.userCountByMonth.[2019]}}],
-                    fill: false,
-                }]
-        },
-
-        // Configuration options go here
-        options: {}
-    });
-
-    var educatorByGradeChartCanvas = document.getElementById('educator-by-grade-chart');
-    var educatorByGradeData = {
-        datasets: [{
-            data: [{{dashboard.userCountByGradeBand}}],
-            backgroundColor: ['#f44336','#673ab7','#03a9f4','#4caf50','#607d8b']
-        }],
-
-        // These labels appear in the legend and in the tooltips when hovering different arcs
-        labels: [
-            '{{{__ "Pre-K & Kindergarten"}}}',
-            '{{{__ "Elementary"}}}',
-            '{{{__ "Middle"}}}',
-            '{{{__ "High School"}}}',
-            '{{{__ "Other"}}}'
-        ]
-    };
-    var educatorByGradeDataKinder = {
-        datasets: [{
-            data: [{{dashboard.userCountByGrade.[edu.pre-k]}},{{dashboard.userCountByGrade.[edu.k]}}],
-            backgroundColor: ['#f44336','#673ab7']
-        }],
-
-        // These labels appear in the legend and in the tooltips when hovering different arcs
-        labels: [
-            '{{{__ "Pre-K"}}}',
-            '{{{__ "Kindergarten"}}}'
-        ]
-    };
-    var educatorByGradeDataElementary = {
-        datasets: [{
-            data: [
-                {{dashboard.userCountByGrade.[edu.1]}},
-                {{dashboard.userCountByGrade.[edu.2]}},
-                {{dashboard.userCountByGrade.[edu.3]}},
-                {{dashboard.userCountByGrade.[edu.4]}},
-                {{dashboard.userCountByGrade.[edu.5]}},
-                {{dashboard.userCountByGrade.[edu.6]}},
-            ],
-            backgroundColor: ['#f44336','#673ab7','#03a9f4','#4caf50','#607d8b','#ff9800']
-        }],
-
-        // These labels appear in the legend and in the tooltips when hovering different arcs
-        labels: [
-            '{{{__ "1st grade"}}}',
-            '{{{__ "2nd grade"}}}',
-            '{{{__ "3rd grade"}}}',
-            '{{{__ "4th grade"}}}',
-            '{{{__ "5th grade"}}}',
-            '{{{__ "6th grade"}}}'
-        ]
-    };
-    var educatorByGradeDataMiddle = {
-        datasets: [{
-            data: [{{dashboard.userCountByGrade.[edu.7]}},{{dashboard.userCountByGrade.[edu.8]}}],
-            backgroundColor: ['#f44336','#673ab7']
-        }],
-
-        // These labels appear in the legend and in the tooltips when hovering different arcs
-        labels: [
-            '{{{__ "7th grade"}}}',
-            '{{{__ "8th grade"}}}'
-        ]
-    };
-    var educatorByGradeDataHigh = {
-        datasets: [{
-            data: [
-                {{dashboard.userCountByGrade.[edu.9]}},
-                {{dashboard.userCountByGrade.[edu.10]}},
-                {{dashboard.userCountByGrade.[edu.11]}},
-                {{dashboard.userCountByGrade.[edu.12]}}
-            ],
-            backgroundColor: ['#f44336','#673ab7','#03a9f4','#4caf50']
-        }],
-
-        // These labels appear in the legend and in the tooltips when hovering different arcs
-        labels: [
-            '{{{__ "9th grade"}}}',
-            '{{{__ "10th grade"}}}',
-            '{{{__ "11th grade"}}}',
-            '{{{__ "12th grade"}}}'
-        ]
-    };
-    var educatorByGradeChart = new Chart(educatorByGradeChartCanvas.getContext('2d'), {
-        type: 'doughnut',
-        data : educatorByGradeData
-    });
-
-    //handle drilldown clicks
-    educatorByGradeChartCanvas.onclick = function(evt) {
-        var activePoints = educatorByGradeChart.getElementsAtEvent(evt);
-        if (activePoints[0]) {
-            var chartData = activePoints[0]['_chart'].config.data;
-            var idx = activePoints[0]['_index'];
-
-            var gradeBand = chartData.labels[idx];
-            var value = chartData.datasets[0].data[idx];
-
-            switch(gradeBand) {
-                case '{{{__ "Pre-K & Kindergarten"}}}':
-                    educatorByGradeChart.destroy();
-                    educatorByGradeChart = new Chart(educatorByGradeChartCanvas.getContext('2d'), {
-                        type: 'doughnut',
-                        data : educatorByGradeDataKinder
-                    });
-                    $("#resetEducatorByGrade").show();
-                    break;
-                case '{{{__ "Elementary"}}}':
-                    educatorByGradeChart.destroy();
-                    educatorByGradeChart = new Chart(educatorByGradeChartCanvas.getContext('2d'), {
-                        type: 'doughnut',
-                        data : educatorByGradeDataElementary
-                    });
-                    $("#resetEducatorByGrade").show();
-                    break;
-                case '{{{__ "Middle"}}}':
-                    educatorByGradeChart.destroy();
-                    educatorByGradeChart = new Chart(educatorByGradeChartCanvas.getContext('2d'), {
-                        type: 'doughnut',
-                        data : educatorByGradeDataMiddle
-                    });
-                    $("#resetEducatorByGrade").show();
-                    break;
-                case '{{{__ "High School"}}}':
-                    educatorByGradeChart.destroy();
-                    educatorByGradeChart = new Chart(educatorByGradeChartCanvas.getContext('2d'), {
-                        type: 'doughnut',
-                        data : educatorByGradeDataHigh
-                    });
-                    $("#resetEducatorByGrade").show();
-                    break;
-                default:
-            }
-
-        }
-    };
-
-    $("#resetEducatorByGrade").hide();
-    $("#resetEducatorByGrade").click(function(){
-        educatorByGradeChart.destroy();
-        educatorByGradeChart = new Chart(educatorByGradeChartCanvas.getContext('2d'), {
-            type: 'doughnut',
-            data : educatorByGradeData
-        });
-        $("#resetEducatorByGrade").hide();
-    });
-
-
-    var educatorBySubjectChartCanvas = document.getElementById('educator-by-subject-chart').getContext('2d');
-    var educatorBySubjectData = {
-        datasets: [{
-            data: [{{dashboard.userCountBySubjectBand}}],
-            backgroundColor: ['#f44336','#673ab7','#03a9f4','#4caf50','#607d8b']
-        }],
-
-        // These labels appear in the legend and in the tooltips when hovering different arcs
-        labels: [
-            'English',
-            'Math',
-            'Science',
-            'Social Studies',
-            'Other'
-        ]
-    };
-    var educatorsBySubjectDataOther = {
-        datasets: [{
-            data: [
-                {{dashboard.userCountBySubject.[top.engineering]}},
-                {{dashboard.userCountBySubject.[top.englishlanguagedevelopment]}},
-                {{dashboard.userCountBySubject.[top.financialliteracy]}},
-                {{dashboard.userCountBySubject.[top.health]}},
-                {{dashboard.userCountBySubject.[top.thearts]}},
-                {{dashboard.userCountBySubject.[top.libmedia-infolit]}},
-                {{dashboard.userCountBySubject.[top.lifeskills]}},
-                {{dashboard.userCountBySubject.[top.physicaleducation]}},
-                {{dashboard.userCountBySubject.[top.technology]}},
-                {{dashboard.userCountBySubject.[top.thearts]}},
-                {{dashboard.userCountBySubject.[top.foreignlanguage]}},
-            ],
-            backgroundColor: ['#f44336','#673ab7','#03a9f4','#4caf50','#607d8b']
-        }],
-
-        // These labels appear in the legend and in the tooltips when hovering different arcs
-        labels: [
-            'Engineering',
-            'English Language Development',
-            'Financial Literacy',
-            'Health',
-            'The Arts',
-            'Library/Media',
-            'Life Skills',
-            'Physical Education',
-            'Technology',
-            'The Arts',
-            'World Languages',
-        ]
-    };
-    var educatorBySubjectChart = new Chart(educatorBySubjectChartCanvas, {
-        // The type of chart we want to create
-        type: 'doughnut',
-
-        // The data for our dataset
-        data : educatorBySubjectData,
-
-        // Configuration options go here
-        options: {}
-    });
-
-    //handle drilldown clicks
-        educatorBySubjectChartCanvas.onclick = function(evt) {
-        var activePoints = educatorBySubjectChart.getElementsAtEvent(evt);
-        if (activePoints[0]) {
-            var chartData = activePoints[0]['_chart'].config.data;
-            var idx = activePoints[0]['_index'];
-
-            var subjectBand = chartData.labels[idx];
-            var value = chartData.datasets[0].data[idx];
-
-            switch(subjectBand) {
-                case 'Other':
-                    educatorBySubjectChart.destroy();
-                    educatorBySubjectChart = new Chart(educatorBySubjectChartCanvas.getContext('2d'), {
-                        type: 'doughnut',
-                        data : educatorBySubjectChartDataOther
-                    });
-                    $("#resetEducatorBySubject").show();
-                    break;
-                default:
-                    console.log("default click");
-            }
-
-        }
-    };
-
-    $("#resetEducatorBySubject").hide();
-    $("#resetEducatorBySubject").click(function(){
-        educatorBySubjectChart.destroy();
-        educatorBySubjectChart = new Chart(educatorBySubjectChartCanvas.getContext('2d'), {
-            type: 'doughnut',
-            data : educatorBySubjectData
-        });
-        $("#resetEducatorBySubject").hide();
-    });
-
-    var soleGrowthChartCanvas = document.getElementById('soles-growth-chart').getContext('2d');
-    var soleGrowthChart = new Chart(soleGrowthChartCanvas, {
-        // The type of chart we want to create
-        type: 'line',
-
-        // The data for our dataset
-        data: {
-            labels: ["January", "February", "March", "April", "May", "June", "July", "August", "September", "October", "November", "December"],
-            datasets: [
-                {
-                    label: "SOLEs Created 2017",
-                    backgroundColor: 'rgb(255, 99, 132)',
-                    borderColor: 'rgb(255, 99, 132)',
-                    data: [{{dashboard.soleCountByMonth.[2017]}}],
-                    fill: false,
-                },
-                {
-                    label: "SOLEs Created 2018",
-                    backgroundColor: 'rgb(47,166,154)',
-                    borderColor: 'rgb(47,166,154)',
-                    data: [{{dashboard.soleCountByMonth.[2018]}}],
-                    fill: false,
-                },
-                {
-                    label: "SOLEs Created 2019",
-                    backgroundColor: 'rgb(3,169,244)',
-                    borderColor: 'rgb(3,169,244)',
-                    data: [{{dashboard.soleCountByMonth.[2019]}}],
-                    fill: false,
-                }]
-        },
-
-        // Configuration options go here
-        options: {}
-    });
-
-    var solesByGradeChartCanvas = document.getElementById('soles-by-grade-chart').getContext('2d');
-    var solesByGradeData = {
-        datasets: [{
-            data: [{{dashboard.soleCountByGradeBand}}],
-            backgroundColor: ['#f44336','#673ab7','#03a9f4','#4caf50','#607d8b']
-        }],
-
-        // These labels appear in the legend and in the tooltips when hovering different arcs
-        labels: [
-            'Pre-K & Kindergarten',
-            'Elementary',
-            'Middle',
-            'High School',
-            'Other'
-        ]
-    };
-    var solesByGradeChart = new Chart(solesByGradeChartCanvas, {
-        type: 'doughnut',
-        data : solesByGradeData
-    });
-
-    var solesBySubjectChartCanvas = document.getElementById('soles-by-subject-chart').getContext('2d');
-    var solesBySubjectData = {
-        datasets: [{
-            data: [{{dashboard.userCountBySubjectBand}}],
-            backgroundColor: ['#f44336','#673ab7','#03a9f4','#4caf50','#607d8b']
-        }],
-
-        // These labels appear in the legend and in the tooltips when hovering different arcs
-        labels: [
-            'English',
-            'Math',
-            'Science',
-            'Social Studies',
-            'Other'
-        ]
-    };
-    var solesBySubjectChart = new Chart(solesBySubjectChartCanvas, {
-        // The type of chart we want to create
-        type: 'doughnut',
-
-        // The data for our dataset
-        data : solesBySubjectData,
-
-        // Configuration options go here
-        options: {}
-    });
-});
-
-</script>
-
