bugfix: wrong route listed in subscriptions page

--- a/views/partials/profile/profile-card-subscriptions.hbs
+++ b/views/partials/profile/profile-card-subscriptions.hbs
@@ -7,7 +7,7 @@
             </div>
         </div>
 
-        <form action="/profile" method="post">
+        <form action="/profile/subscriptions" method="post">
             <div class="row">
 
                 <!--questionTips-->
