dashboard includes list of schools.  Not a perfect view, but good enough.  Doesn't include tablesorter css because it wasn't working right away and I'm too lazy to fix that before committing.  The table is there and you can sort by clicking headers, which seems sufficient for now.

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -13,9 +13,9 @@
                 <li class="tab">
                     <a href="#soles">{{{__ "SOLEs"}}}</a>
                 </li>
-                <!--<li class="tab">-->
-                    <!--<a href="#schools">{{{__ "Schools"}}}</a>-->
-                <!--</li>-->
+                <li class="tab">
+                    <a href="#schools">{{{__ "Schools"}}}</a>
+                </li>
             </ul>
             <div id="educators">
                 <div class="row">
@@ -46,6 +46,13 @@
                     </div>
                     <div class="col s12 m6">
                         {{>rings/dashboard-card-soles-by-subject}}
+                    </div>
+                </div>
+             </div>
+            <div id="schools">
+                <div class="row">
+                    <div class="col s12">
+                        {{>rings/dashboard-card-table-of-schools}}
                     </div>
                 </div>
              </div>
