--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -51,3 +51,7 @@
 {{#if includeChartJS}}
     <script src="/js/Chart.min.js"></script>
 {{/if}}
+
+{{#if includeTableSorter}}
+    <script src="/js/jquery.tablesorter.min.js"></script>
+{{/if}}
