--- a/views/questions-add.hbs
+++ b/views/questions-add.hbs
@@ -6,7 +6,7 @@
 
 <input type="hidden" name="showAll" value="true">
 <div class="row" style="padding-top:50px;">
-    <div class="col s12 offset-m1 m10 offset-l3 l6">
+    <div class="col s12 offset-m1 m10 offset-l3 l6 offset-xl4 xl4">
         <div class="card-panel">
             <div class="valign-wrapper">
                 <div class="valign center" style="width: 100%;">
