--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,6 +1,6 @@
 <div class="breadcrumb-wrapper">
     <a href="/" class="breadcrumb">{{{__ "Home"}}}</a>
-    <a class="breadcrumb">{{{__ "Dashboard"}}}</a>
+    <a class="breadcrumb">{{dashboard.name}} {{{__ "Dashboard"}}}</a>
 </div>
 
 <div class="row">
@@ -16,6 +16,12 @@
                 <li class="tab">
                     <a href="#schools">{{{__ "Schools"}}}</a>
                 </li>
+                <!--I know you want logic in the controllers Drew, the next time we do a map I'll move this-->
+                {{#ifEquals dashboard.rdn "us.pa"}}
+                <li class="tab">
+                    <a href="#map-tab">{{{__ "Map"}}}</a>
+                </li>
+                {{/ifEquals}}
             </ul>
             <div id="educators">
                 <div class="row">
@@ -56,6 +62,18 @@
                     </div>
                 </div>
              </div>
+            <div id="map-tab">
+                <div class="row">
+                    <div class="col s12">
+                        <div id="map"></div>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
 </div>
+
+{{#ifEquals dashboard.rdn "us.pa"}}
+    {{>rings/dashboard-pa-map-javascript}}
+{{/ifEquals}}
