--- a/views/partials/rings/dashboard-card-table-of-schools.hbs
+++ b/views/partials/rings/dashboard-card-table-of-schools.hbs
@@ -14,7 +14,11 @@
             <tbody>
             {{#each dashboard.schools}}
                 <tr>
-                    <td>{{this.name}}</td>
+                    <td>
+                        <a href="https://www.google.com/maps/search/?api=1&query={{this.name}}&query_place_id={{this.placeId}}" target="_blank">
+                        {{this.name}}
+                        </a>
+                    </td>
                     <td>{{this.nSoles}}</td>
                     <td>{{this.nUsers}}</td>
                 </tr>
