--- a/views/partials/profile/profile-card-materials.hbs
+++ b/views/partials/profile/profile-card-materials.hbs
@@ -31,9 +31,9 @@
                     </li>
                     <li class="collection-item">
                         <div class="left-align" style="height: 32.4px;">
-                            <a href="/admin/events?sesh={{sesh}}">{{{__ "Conferences/Events"}}}</a>
+                            <a href="/admin/events">{{{__ "Conferences/Events"}}}</a>
                             <a class="secondary-content waves-effect waves-light btn-small"
-                               href="/admin/events?sesh={{sesh}}">{{{__ "Browse"}}}</a>
+                               href="/admin/events">{{{__ "Browse"}}}</a>
 
                         </div>
                     </li>
