Make most JS files local instead of CDN. closes #449 (#450)

--- a/views/layouts/no-sidebar.hbs
+++ b/views/layouts/no-sidebar.hbs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<script type="text/javascript" src="https://unpkg.com/parse@1.11.1/dist/parse.min.js"></script>
+<script type="text/javascript" src="/js/parse.min.js"></script>
 
 
 {{> sole-config-frontend-js}}
