--- a/views/logout.hbs
+++ b/views/logout.hbs
@@ -25,7 +25,7 @@
     </div>
 </div>
 
-<script type="text/javascript" src="https://unpkg.com/parse@1.11.1/dist/parse.min.js"></script>
+<script type="text/javascript" src="/js/parse.min.js"></script>
 
 <script src="https://apis.google.com/js/platform.js?onload=logoutOfGoogle" async defer></script>
 <script type="text/javascript">
