--- a/views/layouts/prelogin.hbs
+++ b/views/layouts/prelogin.hbs
@@ -10,7 +10,7 @@
 </main>
 
 {{> footer}}
-<script type="text/javascript" src="https://unpkg.com/parse@1.11.1/dist/parse.min.js"></script>
+<script type="text/javascript" src="/js/parse.min.js"></script>
 
 {{> sole-config-frontend-js}}
 <meta name="google-signin-client_id" content="824307770319-v35co4sbfui42q2a93hcccvk68hfpam7.apps.googleusercontent.com">
