--- a/views/partials/rings/dashboard-pa-map-javascript.hbs
+++ b/views/partials/rings/dashboard-pa-map-javascript.hbs
@@ -1,6 +1,6 @@
-<script src="https://d3js.org/d3.v4.js"></script>
-<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-<script src="https://d3js.org/d3-geo-projection.v2.min.js"></script>
+<script src="/js/d3/d3.v4.js"></script>
+<script src="/js/d3/d3-scale-chromatic.v1.min.js"></script>
+<script src="/js/d3/d3-geo-projection.v2.min.js"></script>
 <script>
 
     var map = d3.select("#map");
