--- a/views/questions-add.hbs
+++ b/views/questions-add.hbs
@@ -40,9 +40,9 @@
     </div>
 </div>
 
-<script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script type="text/javascript" src="https://unpkg.com/parse@1.11.1/dist/parse.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
+<script type="text/javascript" src="/js/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="/js/parse.min.js"></script>
+<script type="text/javascript" src="/js/handlebars-v4.0.11.js"></script>
 {{>question-templates}}
 
 {{> sole-config-frontend-js}}
