--- a/views/questions.hbs
+++ b/views/questions.hbs
@@ -109,8 +109,8 @@
     </div>
 </div>
 
-<script type="text/javascript" src="https://unpkg.com/parse@1.11.1/dist/parse.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.11/handlebars.min.js"></script>
+<script type="text/javascript" src="/js/parse.min.js"></script>
+<script type="text/javascript" src="/js/handlebars-v4.0.11.js"></script>
 <script type="text/javascript" src="/js/masonry-layout/dist/masonry.pkgd.min.js"></script>
 <script type="text/javascript" src="/js/masonry.pkgd.min.js"></script>
 
