--- a/views/soles-reflect.hbs
+++ b/views/soles-reflect.hbs
@@ -281,7 +281,7 @@
 </div>
 
 
-<script type="text/javascript" src="https://unpkg.com/parse@1.11.1/dist/parse.min.js"></script>
+<script type="text/javascript" src="/js/parse.min.js"></script>
 
 {{> sole-config-frontend-js}}
 <script type="text/javascript" src="/js/dropzone.min.js"></script>
