--- a/views/admin/questions.hbs
+++ b/views/admin/questions.hbs
@@ -5,9 +5,26 @@
 </div>
 
 <div class="row">
+    <div class="col s6">
+        <div class="card-panel">
+            <h4 class="center-align">Search</h4>
+            <div class="input-field">
+                <i class="material-icons prefix">search</i>
+                <input id="search" name="q" type="search"
+                       class="keep-bottom"
+                       placeholder="{{{__ "Search by keyword"}}}">
+            </div>
+            {{>standard-picker}}
+        </div>
+    </div>
+    <div class="col s6">
+        <div class="card-panel">
+            <h4 class="center-align">Tag</h4>
+            {{>standard-picker}}
+        </div>
+    </div>
     <div class="col s12">
         <div class="card-panel">
-
             <table class="striped">
                 <thead>
                 <tr>
