--- a/views/questions.hbs
+++ b/views/questions.hbs
@@ -18,7 +18,7 @@
                                placeholder="{{{__ "Search by keyword"}}}">
                     </div>
 
-                    {{>standard-picker}}
+                    {{>standard-picker2}}
 
                 </div>
             </form>
@@ -111,10 +111,10 @@
 
 <script type="text/javascript" src="/js/parse.min.js"></script>
 <script type="text/javascript" src="/js/handlebars-v4.0.11.js"></script>
-<script type="text/javascript" src="/js/masonry-layout/dist/masonry.pkgd.min.js"></script>
 <script type="text/javascript" src="/js/masonry.pkgd.min.js"></script>
 
 {{>question-templates}}
 
 {{> sole-config-frontend-js}}
 <script type="text/javascript" src="/js/questions.js"></script>
+<script type="text/javascript" src="/js/questions2.js"></script>
