bugfix:  * replace unicode character for line break with nothing, so it looks ok

--- a/views/partials/standard-picker-pa.hbs
+++ b/views/partials/standard-picker-pa.hbs
@@ -40,8 +40,6 @@
             <option value=""></option>
         </select>
     </div>
-    ​
     <div id="refine">
-    </div>
-    ​
+    </div>​
 </div>
