--- a/views/partials/rings/dashboard-pa-map-javascript.hbs
+++ b/views/partials/rings/dashboard-pa-map-javascript.hbs
@@ -1,4 +1,4 @@
-<script src="/js/d3/d3.v4.js"></script>
+<script src="/js/d3/d3.v4.min.js"></script>
 <script src="/js/d3/d3-scale-chromatic.v1.min.js"></script>
 <script src="/js/d3/d3-geo-projection.v2.min.js"></script>
 <script>
