--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,4 @@
 <div class="row" style="padding-top:20px;">
-
-
     <div class="col s12 offset-m1 m10 offset-l3 l6">
 
         <div class="card">
@@ -18,9 +16,9 @@
                 {{/if}}
              </div>
         </div>
-
     </div>
-        {{#if multipleRings}}
+
+    {{#if multipleRings}}
             <div class="col s12 offset-m1 m10 offset-l3 l6">
                 <div class="card-panel">
                     <table id="ringTable" class="highlight">
@@ -69,6 +67,11 @@
             </div>
         {{/each}}
         {{/if}}
+</div>
+<div class="row" style="padding-top:20px;">
+    {{#if myRings.uspa}}
+        {{> profile/profile-card-ppid }}
+    {{/if}}
 </div>
 
 {{#if config.language}}
